--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="/icon.png" type="image/png" />
     <script src="./src/main.ts" type="module"></script>
-    <title>UI Library</title>
+    <title>PiXer</title>
   </head>
-  <body>
-    <div id="root"></div>
-  </body>
+  <body></body>
 </html>
